Token şifreleme işlemleri gerçekleştirildi. Token işlemi header'a çekildi.
