# src/controllers/user.ts
@@ -1,6 +1,6 @@
 import db from "../app-data-source";
 import { Request, Response } from "express";
-import { UserModel } from "../entity/User";
+import { UserModel } from "../models/User";
 
 export const getUsers = async (req: Request, res: Response) => {
   /*  
@@ -15,6 +15,13 @@ export const getUsers = async (req: Request, res: Response) => {
 };
 
 export const getUserWithRole = async (req: Request, res: Response) => {
+  /*  
+    #swagger.tags = ['User']
+    #swagger.description = 'Kullanıcıları rolleriyle beraber listeler.'
+    #swagger.security = [{
+      "api_key": []
+    }]
+  */
   const users = await db.getRepository(UserModel).find({
     relations: ["role"],
   });
@@ -22,6 +29,14 @@ export const getUserWithRole = async (req: Request, res: Response) => {
 };
 
 export const getUser = async (req: Request, res: Response) => {
+  /*  
+    #swagger.tags = ['User']
+    #swagger.description = 'Kullanıcı bilgisini getirir.'
+    #swagger.parameters['id'] = { description: 'ID gereklidir.' }
+    #swagger.security = [{
+      "api_key": []
+    }]
+  */
   const results = await db.getRepository(UserModel).findOneBy({
     Id: req.params.id,
   });
@@ -29,12 +44,21 @@ export const getUser = async (req: Request, res: Response) => {
 };
 
 export const postUser = async (req: Request, res: Response) => {
-  const user = db.getRepository(UserModel).create(req.body);
+  const { username, password, firstName, lastName, phoneNumber, email } = req.body;
+  /*  
+    #swagger.tags = ['User']
+    #swagger.description = 'Yeni kullanıcı ekler'
+    #swagger.security = [{
+      "api_key": []
+    }]
+  */
+  const user = db.getRepository(UserModel).create({ username, password, firstName, lastName, phoneNumber, email });
   const results = await db.getRepository(UserModel).save(user);
   return res.send(results);
 };
 
 export const putUser = async (req: Request, res: Response) => {
+  const { username, password, firstName, lastName, email, phoneNumber } = req.body;
   /*  
     #swagger.tags = ['User']
     #swagger.description = 'Kullanıcı bilgilerini günceller.'
@@ -46,15 +70,16 @@ export const putUser = async (req: Request, res: Response) => {
   const user = await db.getRepository(UserModel).findOneBy({
     Id: req.params.id,
   });
-  // db.getRepository(UserModel).merge(user, req.body);
-  // const results = await db.getRepository(UserModel).save(user);
+  db.getRepository(UserModel).merge(user, { username, password, firstName, lastName, phoneNumber, email });
+  const results = await db.getRepository(UserModel).save(user);
   /* #swagger.responses[200] = { 
       schema: { "$ref": "#/definitions/UpdateUser" },
       description: "User registered successfully." } */
-  return res.status(200).send(user);
+  return res.status(200).send(results);
 };
 
 export const deleteUser = async (req: Request, res: Response) => {
+  const { id } = req.params;
   /*  
     #swagger.tags = ['User']
     #swagger.description = 'Kullanıcıyı siler.'
@@ -63,6 +88,6 @@ export const deleteUser = async (req: Request, res: Response) => {
       "api_key": []
     }]
   */
-  const results = await db.getRepository(UserModel).delete(req.params.id);
+  const results = await db.getRepository(UserModel).delete(id);
   return res.send(results);
 };
